# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,12 @@
 import { Router, type IRouter } from "express";
-import healthRouter from "./health";
+import healthRouter from "./health.js";
+import uploadRouter from "./upload.js";
+import dashboardRouter from "./dashboard.js";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(uploadRouter);
+router.use(dashboardRouter);
 
 export default router;
